# ol_bclearer_sdk

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
libraries/interop_services/: README.md  pyproject.toml
libraries/interop_services/bclearer_interop_services/b_dictionary_service/common_knowledge/: b_dictionary_return_types.py  table_b_dictionary_return_types.py  table_register_b_dictionary_return_types.py
libraries/interop_services/bclearer_interop_services/b_dictionary_service/mapper_objects_service/: mapper_objects_to_table_converter.py
libraries/interop_services/bclearer_interop_services/b_dictionary_service/objects/: b_dictionaries.py  row_b_dictionaries.py  table_b_dictionaries.py  table_registers.py
libraries/interop_services/bclearer_interop_services/b_dictionary_service/python_extension_services/: dictionary_joiner.py
libraries/interop_services/bclearer_interop_services/b_dictionary_service/table_as_dictionary_service/: data_policy_carriage_return_to_table_as_dictionary_applicator.py  dataframe_to_table_as_dictionary_converter.py  static_column_value_to_table_as_dictionary_adder.py  table_as_dictionary_by_column_value_filter.py  table_as_dictionary_by_column_value_not_matching_filterer.py  table_as_dictionary_by_column_values_list_filter.py  table_as_dictionary_by_column_values_list_not_matching_filterer.py  table_as_dictionary_column_names_filter_and_reorder.py  table_as_dictionary_column_names_to_lowercase_converter.py  table_as_dictionary_column_remover.py  table_as_dictionary_column_values_as_strings_getter.py  table_as_dictionary_deduplicator_by_value.py  table_as_dictionary_from_csv_file_reader.py  table_as_dictionary_to_dataframe_converter.py  table_as_dictionary_unique_values_of_column_getter.py  tables_as_dictionaries_on_index_merger.py
libraries/interop_services/bclearer_interop_services/dataframe_service/: all_cells_to_string_converter.py  column_cells_to_string_converter.py  dataframe_column_value_separator_replacer.py  dataframe_columns_to_default_value_setter.py  dataframe_deep_copy_getter.py  dataframe_helper.py  dataframe_mergers.py  string_value_across_whole_dataframe_replacer.py
libraries/interop_services/bclearer_interop_services/dataframe_service/dataframe_helpers/: dataframe_all_nan_with_empty_string_replacer.py  dataframe_columns_filterer.py  dataframe_columns_renamer.py  dataframe_dictionary_uuidifier.py  dataframe_focus_minus_matched_other_getter.py  dataframe_groupers.py  dataframe_split_constants.py  dataframe_splitter.py  dataframe_splitter_on_column_equality.py  dataframe_standardiser.py  dataframe_uuidifier.py
libraries/interop_services/bclearer_interop_services/dataframe_service/parquet_as_dataframe_services/: pandas_dataframe_as_parquet_table_using_fastparquet_exporter.py  pandas_dataframe_as_parquet_table_using_pyarrow_exporter.py  pyspark_dataframe_as_parquet_table_using_pandas_and_fast_parquet_exporter.py  pyspark_dataframe_as_parquet_table_using_pandas_exporter.py  pyspark_dataframe_as_parquet_table_using_pyarrow_exporter.py  pyspark_dataframe_as_parquet_table_using_pyspark_exporter.py
libraries/interop_services/bclearer_interop_services/delimited_text/: csv_files_from_folder_to_dataframe_dictionary_reader.py  dataframe_dictionary_to_csv_files_writer.py  delimited_text_read.py  table_as_dictionary_to_csv_exporter.py  utf_8_csv_reader.py
libraries/interop_services/bclearer_interop_services/document_store_services/json_service/: dictionary_to_json_file_exporter.py
libraries/interop_services/bclearer_interop_services/document_store_services/mongo_db_service/: mongo_db_wrapper.py
libraries/interop_services/bclearer_interop_services/document_store_services/xml_service/: xml_file_as_gzip_compressed_file_exporter.py  xml_gz_file_reader.py  xml_to_list_of_dictionaries_converter.py  zipped_xml_file_paths_getter.py
libraries/interop_services/bclearer_interop_services/excel_services/: ExcelFacade.py  excel_facades.py
libraries/interop_services/bclearer_interop_services/file_system_service/: all_files_from_file_system_object_paths_getter.py  directory_subfolders_getter.py  file_absolute_path_getter.py  file_content_as_string_reader.py  file_content_replacer.py  file_or_folder_mover.py  file_system_object_mb_size_getter.py  file_system_objects_from_paths_getter.py  files_of_extension_from_folder_getter.py  filesystem_renamer.py  first_level_deep_file_system_objects_getter.py  first_level_folder_children_paths_getter.py  folder_content_deletor.py  folder_selector.py  new_folder_if_required_creator.py  relative_path_to_absolute_converter.py  remove_files.py  timestamped_subfolder_into_output_folder_creator.py
libraries/interop_services/bclearer_interop_services/graph_services/: __init__.py
libraries/interop_services/bclearer_interop_services/hdf5_service/: dataframe_dictionary_from_hdf5_file_deletor.py  dataframe_dictionary_from_hdf5_file_reader.py
libraries/interop_services/bclearer_interop_services/list_services/: list_chunks_getter.py
libraries/interop_services/bclearer_interop_services/parquet_service/: parquet_table_as_pandas_using_delta_lake_getter.py
libraries/interop_services/bclearer_interop_services/pyspark_service/: folder_to_delta_table_converter.py  pyspark_delta_catalog_session_getter.py
libraries/interop_services/bclearer_interop_services/relational_database_services/: DatabaseFactory.py  RelationaDatabaseFacade.py
libraries/interop_services/bclearer_interop_services/tuple_service/: tuple_attribute_value_getter.py
libraries/interop_services/sandpit/MKh/: chatbot.py  neo4j_query_orchestration.py  publish_data_to_neo4j.ipynb  publish_data_to_neo4j_latest.ipynb  query-neo4j.py
libraries/interop_services/tests/: conftest.py
libraries/interop_services/tests/configurations/: mongodb_configuration.json
libraries/interop_services/tests/fixtures/: __init__.py  csv.py  databases.py  mongodb.py  neo4j.py  neo4j_connections.py  neo4j_docker.py  neo4j_local_connections.py  neoj_data.py  paths.py
(+689 files in other folders)
