[tool.poetry]
name = "bclearer"
version = "0.1.0"
description = "A collection of interop, core, and orchestration services for the bclearer framework"
authors = ["Mesbah Khan <khanm@ontoledgy.io>"]
readme = "README.md"
packages = [
    {include = "bclearer_core",from = "libraries/core"  },
    {include = "bclearer_interop_services",from = "libraries/interop_services"},
    {include = "bclearer_orchestration_services", from = "libraries/orchestration_services"}
]

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.1.0"
pandas = "^2.2.3"
gitpython = "^3.1.43"
xlsxwriter = "^3.2.0"
xlrd = "^2.0.1"
chardet = "^5.2.0"
h5py = "^3.11.0"
tables = "^3.10.1"
radon = "^6.0.1"
numpy = "^2.1.1"
pyodbc = "^5.1.0"
pylint = "^3.3.0"
kafka-python-ng = "^2.2.2"
psutil = "^6.0.0"
networkx = "^3.3"
msaccessdb = "^1.0.0"
lxml = "^5.3.0"
pyspark = "^3.5.2"
delta-spark = "^3.2.0"
deltalake = "^0.20.0"
fastparquet = "^2024.5.0"
basexclient = "^8.4.4"
pytest = "^8.3.3"
openpyxl = "^3.1.5"
neo4j = "^5.24.0"
graphviz = "^0.20.3"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
#bclearer_core = { path = "libraries/core/", develop = true }
bclearer-interop-services = "^0.1.0"
#bclearer_orchestration_services = "^0.1.0"


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
